--- a/index.html
+++ b/index.html
@@ -3,23 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOLA</title>
+    <title>Document</title>
 </head>
 <body>
-    ESTE ES MI DOCUMENTO
-
-    <table>
-
-        <tr>
-            <td> Fila 1 C1</td>
-            <td> Fila 1 C2</td>
-
-        </tr>
-        <tr>
-            <td> Fila 2 C1</td>
-            <td> Fila 2 C2</td>
-
-        </tr>
-    </table>
+    <div class="btn-group" role="group" aria-label="">
+        <button type="button" class="btn btn-primary">BOTON</button>
+        <button type="button" class="btn btn-primary">BOTON</button>
+        <button type="button" class="btn btn-primary">BOTON</button>
+    </div>
 </body>
 </html>
